--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,10 @@
-# Compiled class file
+# --- Java Derleme Dosyaları ---
 *.class
-
-# Log file
 *.log
-
-# BlueJ files
 *.ctxt
-
-# Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
-# Package Files #
+# --- Paket Dosyaları (Yüklü kalabalık dosyalar) ---
 *.jar
 *.war
 *.nar
@@ -19,6 +13,44 @@
 *.tar.gz
 *.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+# --- IDE ve Editör Ayarları (Gereksiz kişisel ayarlar) ---
+# VS Code
+.vscode/
+.history/
+*.code-workspace
+
+# IntelliJ IDEA
+.idea/
+*.iml
+*.iws
+*.ipr
+
+# Eclipse
+.classpath
+.project
+.settings/
+
+# NetBeans
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
+
+# --- İşletim Sistemi Çöpleri (Çok Önemli) ---
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+._*
+
+# --- Hata Logları ---
 hs_err_pid*
 replay_pid*
